[package]
name = "rustloader"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
winapi = { version = "0.3", features = [
    "libloaderapi",
    "memoryapi",
    "winuser",
    "winnt",
    "minwindef"
] }

[[bin]]
name = "rustloader"
path = "src/main.rs"